--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,4 +7,9 @@ page-home {
         width: 100%;
         height: 70%;
     }
+
+    td {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
