Ajout de la suppression de commentaires

--- a/src/pages/homeManager/homeManager.scss
+++ b/src/pages/homeManager/homeManager.scss
@@ -9,7 +9,14 @@ page-manager {
     }
 
     td {
+        padding-top: 2px;
+        padding-bottom: 2px;
         padding-left: 15px;
         padding-right: 15px;
+    }
+
+    .delete {
+        height: 100%;
+        width: 80%;
     }
 }
