--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,6 +9,8 @@ page-home {
     }
 
     td {
+        padding-top: 2px;
+        padding-bottom: 2px;
         padding-left: 15px;
         padding-right: 15px;
     }
