--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -19,6 +19,11 @@ page-home {
         display: none;
     }
 
+    .logout {
+        transform: scale(0.8);
+        background-color: rgb(223, 219, 219);
+    }
+
     .bottom {
         margin-top: 40px;
     }
